--- a/index.html
+++ b/index.html
@@ -72,8 +72,74 @@
             
 
                     </div>  
+                </div>
+
+                <!-- Checkout Form being displayed-->
+                <div v-else>
+                    <div class="checkout-page">
+                        <h2>Checkout Page</h2>
+                    </div>
+                    <div class="checkout-form">
+                        <h2>Checkout Form</h2>
+                        <p>
+                          <strong>First Name:</strong>
+                          <input v-model.trim="order.firstName"/>
+                        </p>
+                        <p>
+                          <strong>Last Name:</strong>
+                          <input v-model="order.lastName"/>
+                        </p>
+                        <p>
+                          <strong>Number:</strong>
+                          <input v-model="order.Number" type="text" maxlength="13" @input="order.Number = order.Number.replace(/[^0-9+]/g, '')" />
+                        </p>
+                        <p>
+                          <strong>Address:</strong>
+                          <input v-model="order.address"/>
+                        </p>
+                        <p>
+                          <strong>City:</strong>
+                          <input v-model="order.city"/>
+                        </p>
+                        <p>
+                          <strong>State:</strong>
+                          <select v-model="order.state">
+                            <option disabled value="">State</option>
+                            <option v-for="(state, key) in states" :value="state">{{ key }}</option>
+                          </select>
+                        </p>
+                        <p>
+                          <strong>Zip/Postal Code:</strong>
+                          <input v-model.number="order.zip" type="number"/>
+                        </p>
+                        <p>
+                          <input type="checkbox" id="gift" v-model="order.gift">
+                          <label for="gift">Ship as Gift?</label>
+                        </p>
+                        <p>
+                          <input type="radio" id="home" value="Home" v-model="order.method">
+                          <label for="home">Home</label>
+                        </p>
+                        <p>
+                          <input type="radio" id="business" value="Business" v-model="order.method">
+                          <label for="business">Business</label>
+                        </p>
 
                 </div>
+                <div class="order-information">
+                        <h2>Order Information</h2>
+                        <p>First Name: {{ order.firstName }}</p>
+                        <p>Last Name: {{ order.lastName }}</p>
+                        <p>Number: {{ order.Number }}</p>
+                        <p>Address: {{ order.address }}</p>
+                        <p>City: {{ order.city }}</p>
+                        <p>Zip: {{ order.zip }}</p>
+                        <p>State: {{ order.state }}</p>
+                        <p>Gift? {{ order.gift }}</p>
+                        <p>Method: {{ order.method }}</p>
+                </div>
+                        <button v-on:click="submitOrder">Place Order</button>
+                    </div>
             </main>
          </div>
 
